--- a/microservices/ConfigurationService/pom.xml
+++ b/microservices/ConfigurationService/pom.xml
@@ -27,6 +27,8 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
+		 <version>2.1.0.M3</version>
+		 <type>jar</type>
 		</dependency>
 
 		<dependency>
