--- a/microservices/UserService/src/main/resources/application.properties
+++ b/microservices/UserService/src/main/resources/application.properties
@@ -1,12 +1,2 @@
-server.port=3006
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.jackson.serialization.fail-on-empty-beans=false
-spring.datasource.hikari.allow-pool-suspension=true
-spring.datasource.hikari.max-lifetime=5000
-spring.datasource.hikari.idle-timeout=5000
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-authenservice.jwt.secret=${SECRET_KEY}
+spring.application.name=user-service
+spring.cloud.config.uri=http://localhost:8888
