[ADD] Add a shutdown end point for config service

--- a/microservices/ConfigurationService/src/main/resources/application.properties
+++ b/microservices/ConfigurationService/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=config-service
 spring.cloud.config.server.git.uri=https://github.com/gammyp/SEAL-Configuration
 spring.cloud.config.server.git.username=${GIT_USER}
 spring.cloud.config.server.git.password=${GIT_PASSWORD}
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+endpoints.shutdown.enabled=true
